# HyprNetShell

./: .gitignore  DesktopEntryLauncher.cs  HyprNetShell.csproj  HyprNetShell.slnx  NativeMethods.cs  Program.cs  README.md
Core/: HyprNetShell.Core.csproj
Core/Assets/: Icons.cs
Core/Bar/: AppIconResolver.cs  AudioModule.cs  BatteryModule.cs  BluetoothModule.cs  CenterModule.cs  LanguageModule.cs  MainDialog.cs  ModulesCommon.cs  MusicModule.cs  NetworkModule.cs  NotificationCard.cs  NotificationPopupLayout.cs  StatusBar.cs  StatusBarTheme.cs  SystemStatsModule.cs  Theme.cs  TrayModule.cs  WorkspacesModule.cs
Core/Logging/: AppLogger.cs
Core/Models/: AudioSnapshot.cs  BarModuleSnapshot.cs  BarSnapshot.cs  BatterySnapshot.cs  BluetoothSnapshot.cs  DisplayControlsSnapshot.cs  HyprlandSnapshot.cs  MusicSnapshot.cs  NetworkSnapshot.cs  NotificationsSnapshot.cs  PopupSnapshot.cs  SystemStatsSnapshot.cs  TrayItemSnapshot.cs  WorkspaceSnapshot.cs
Core/Platform/: CommandRunner.cs  Utils.cs
Core/Services/: BarStateBuilder.cs  IBarDataService.cs
GUI/: HyprNetShell.GUI.csproj
GUI/Layout/: Layout.cs  Node.cs
Generators/: HyprNetShell.Generators.csproj  SvgAssetGenerator.cs
Native/: hypr_layer.c  hypr_layer.h  meson.build
Native/protocols/: wlr-layer-shell-unstable-v1.xml
Properties/PublishProfiles/: NativeAotOneFile.pubxml
Rendering/: FontRenderer.cs  GlShaders.cs  HyprNetShell.Rendering.csproj  IRenderApi.cs  ImmediateRow.cs  RawImageData.cs  Renderer.cs  SvgAsset.cs  TextureRepository.cs
Rendering/Primitives/: Color.cs  Gradient.cs  Primitives.cs  (+1 more)
(+58 files in other folders)
